[tool.poetry]
name = "analysis"
version = "0.1.0"
description = ""
authors = ["Dylan Teague <dteague@wisc.edu>"]

[tool.poetry.dependencies]
python = "^3.7"
awkward1 = "^0.2.31"
uproot4 = "^0.0.17"
numba = "^0.51.0"
anytree = "^2.8.0"
setuptools = "^50.3.0"
pyarrow = "^1.0.1"
scipy = "^1.5.2"

[tool.poetry.dev-dependencies]
ipython = "^7.18.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
